# HiPool

./: .gitignore  BERT_Hierarchical.py  Bert_Classification.py  Custom_Dataset_Class.py  Dataset_Sent_Class.py  Dataset_Split_Class.py  Graph_Models.py  Graph_Models_utils.py  README.md  RoBERT.py  TransformerLayer.py  environment.yml  environment_apple_silicon.yml  pyproject.toml  train.py  train_hier.py  train_imdb.py  utils.py
.github/workflows/: main.yml
data/: imdb_sample.csv
fixtures/data/: curiam_sample.json
scripts/: combined_model.py  load_dataset.py  metalinguistic_sentence_model.py  minimal_model.py  model_exploration.py  train.py  train_hier.py  train_imdb.py
scripts/notebooks/: chunk_diagnosis.ipynb  minimal_model.ipynb  model_inference.ipynb
src/hipool/: BERT_Hierarchical.py  Bert_Classification.py  Bert_Classification_minimal.py  Dataset_Split_Class.py  Graph_Models.py  TransformerLayer.py  __init__.py  chunk.py  curiam_categories.py  curiam_reader.py  curiam_sent_reader.py  datasets.py  eval.py  hipool.py  imdb_reader.py  models.py  sent_model_utils.py  train.py  utils.py
tests/: curiam_reader_test.py  utils_test.py
