[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hipool"
version = "0.0"
authors = [
    {name = "Irene Li"},
    {name = "Michael Kranzlein"}
]

# https://stackoverflow.com/questions/50155464/using-pytest-with-a-src-layer
[tool.pytest.ini_options]
pythonpath = [
  "src"
]